@@ -2,8 +2,8 @@ Source: libosmocore
 Section: libs
 Priority: optional
 Maintainer: Harald Welte <laforge@gnumonks.org>
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev, autoconf, automake, libtool, dh-autoreconf, libdpkg-perl, git, doxygen
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 7.0.50), autotools-dev, autoconf, automake, libtool, dh-autoreconf, libdpkg-perl, git, doxygen
+Standards-Version: 3.9.2
 Homepage: http://bb.osmocom.org/trac/wiki/libosmocore
 Vcs-Git: git://git.osmocom.org/libosmocore.git
 Vcs-Browser: http://git.osmocom.org/gitweb?p=libosmocore.git;a=summary
@@ -25,9 +25,9 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libosmocore
 Description: Utilities for gsm
 
-
-#Package: libosmocore-dbg
-#Section: libdevel
-#Architecture: any
-#Depends: ${shlibs:Depends}, ${misc:Depends}
-#Description: Debug symbols for Open Source MObile COMmunications CORE library
+Package: libosmocore-dbg
+Architecture: any
+Section: debug
+Priority: extra
+Depends: libosmocore (= ${binary:Version}), ${misc:Depends}
+Description: Debug symbols for Open Source MObile COMmunications CORE library
